# flycatcher

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: README.md  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_tracker.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  pr-labeler.yml  publish.yml  release-drafter.yml
docs/: examples.md
docs/api/: fields.md  index.md  schema.md  validators.md
docs/api/generators/: polars.md  pydantic.md  sqlalchemy.md
docs/assets/: .gitkeep  extra.css  hide-doctest-markers.js
docs/how-to/: custom-validators.md  index.md
docs/includes/: abbreviations.md
docs/tutorials/: first-schema.md  index.md
examples/: EXAMPLES-README.md  basic_usage.py  cross_field_validators.py  etl_pipeline.py  validation_modes.py
src/flycatcher/: __init__.py  base.py  fields.py  validators.py
src/flycatcher/generators/: __init__.py  polars.py  pydantic.py  sqlalchemy.py
src/flycatcher/validators/: __init__.py  base.py  core.py  datetime.py  membership.py  ops.py  string.py
tests/: conftest.py  test_fields.py  test_schema.py  test_validators.py
tests/generators/: test_polars.py  test_pydantic.py  test_sqlalchemy.py
