[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flycatcher"
version = "0.1.0"
description = "Define your data schema once. Validate at scale. Stay columnar."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Matt McMullan", email = "your.email@example.com"}
]
keywords = ["schema", "pydantic", "polars", "sqlalchemy", "etl", "dataframe", "validation", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mmcmullan/flycatcher"
Documentation = "https://github.com/mmcmullan/flycatcher#readme"
Repository = "https://github.com/mmcmullan/flycatcher"
Issues = "https://github.com/mmcmullan/flycatcher/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flycatcher*"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=flycatcher --cov-report=html --cov-report=term-missing"
