[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flycatcher"
version = "0.1.0"
description = "Define your data schema once. Validate at scale. Stay columnar."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Matt McMullan", email = "your.email@example.com" }]
keywords = [
    "schema",
    "pydantic",
    "polars",
    "sqlalchemy",
    "etl",
    "dataframe",
    "validation",
    "orm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/mrmcmullan/flycatcher"
Documentation = "https://github.com/mrmcmullan/flycatcher#readme"
Repository = "https://github.com/mrmcmullan/flycatcher"
Issues = "https://github.com/mrmcmullan/flycatcher/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flycatcher*"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N806",
] # Allow uppercase variables in functions (e.g., class assignments)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
# testpaths restricts where pytest looks for test files
# For doctests, we need pytest to also scan src/ for doctest examples
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# --doctest-modules will scan modules, but we need to tell it where to look
# Adding src/ explicitly so doctests are discovered
addopts = "--cov=flycatcher --cov-report=html --cov-report=term-missing --doctest-modules src/ tests/ -v"
